<resources>
    <string name="app_name">SMARK</string>
    <string name="title_activity_login">LogIn</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_one">No account yet? Create one</string>
    <string name="login_btn">Login</string>
    <string name="signup_txt">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="smark_logo">SMARK Logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="btn_signup">Register</string>
    <string name="already_signin">Already Signed In? Click here to Login</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="btn_update">Update</string>
</resources>
